// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePickerContainer component renders when there is an initial value 1`] = `
<DatePickerContainer
  closeFunction={[Function]}
  defaultText="No date selected"
  handleClickCopyToAll={[Function]}
  icon={null}
  initialValue={"2022-11-10T03:00:00.000Z"}
  rowIndex={0}
>
  <div
    className="date-picker-container"
  >
    <div
      className="icon-and-datetime-picker"
    >
      <n
        className=""
        closeOnClickOutside={true}
        closeOnSelect={false}
        closeOnTab={true}
        dateFormat="MMM D"
        initialValue={"2022-11-10T03:00:00.000Z"}
        initialViewDate={2022-11-10T09:00:00.000Z}
        input={true}
        inputProps={Object {}}
        isValidDate={[Function]}
        onBeforeNavigate={[Function]}
        onCalendarClose={[Function]}
        onCalendarOpen={[Function]}
        onChange={[Function]}
        onClose={[Function]}
        onNavigate={[Function]}
        onNavigateBack={[Function]}
        onNavigateForward={[Function]}
        onOpen={[Function]}
        renderInput={[Function]}
        renderView={[Function]}
        strictParsing={true}
        timeConstraints={Object {}}
        timeFormat="h:mm a"
        utc={true}
      >
        <OnClickOutside(n)
          className="rdt"
          eventTypes={
            Array [
              "mousedown",
              "touchstart",
            ]
          }
          excludeScrollbar={false}
          onClickOut={[Function]}
          outsideClickIgnoreClass="ignore-react-onclickoutside"
          preventDefault={false}
          stopPropagation={false}
        >
          <n
            className="rdt"
            disableOnClickOutside={[Function]}
            enableOnClickOutside={[Function]}
            eventTypes={
              Array [
                "mousedown",
                "touchstart",
              ]
            }
            onClickOut={[Function]}
            outsideClickIgnoreClass="ignore-react-onclickoutside"
            preventDefault={false}
            stopPropagation={false}
          >
            <div
              className="rdt"
            >
              <div>
                <DatetimeInput
                  defaultText="No date selected"
                  props={
                    Object {
                      "className": "form-control",
                      "onChange": [Function],
                      "onClick": [Function],
                      "onFocus": [Function],
                      "onKeyDown": [Function],
                      "type": "text",
                      "value": "Nov 10 3:00 am",
                    }
                  }
                >
                  <button
                    className="interactive-wrapper focus-on-light datetime-input"
                    onClick={[Function]}
                    type="button"
                  >
                    <input
                      className="form-control"
                      onChange={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      placeholder="No date selected"
                      type="text"
                      value="Nov 10 3:00 am"
                    />
                    <img
                      alt="dropdown indicator"
                      className="dropdown-indicator"
                      src="https://assets.quill.org/images/icons/dropdown.svg"
                    />
                  </button>
                </DatetimeInput>
              </div>
              <div
                className="rdtPicker"
              >
                <a
                  isValidDate={[Function]}
                  moment={[Function]}
                  navigate={[Function]}
                  renderDay={[Function]}
                  selectedDate={"2022-11-10T03:00:00.000Z"}
                  showView={[Function]}
                  timeFormat="h:mm a"
                  updateDate={[Function]}
                  viewDate={"2022-11-10T09:00:00.000Z"}
                >
                  <div
                    className="rdtDays"
                  >
                    <table>
                      <thead>
                        <l
                          onClickNext={[Function]}
                          onClickPrev={[Function]}
                          onClickSwitch={[Function]}
                          switchColSpan={5}
                          switchContent="November 2022"
                          switchProps={
                            Object {
                              "data-value": 10,
                            }
                          }
                        >
                          <tr>
                            <th
                              className="rdtPrev"
                              onClick={[Function]}
                            >
                              <span>
                                ‹
                              </span>
                            </th>
                            <th
                              className="rdtSwitch"
                              colSpan={5}
                              data-value={10}
                              onClick={[Function]}
                            >
                              November 2022
                            </th>
                            <th
                              className="rdtNext"
                              onClick={[Function]}
                            >
                              <span>
                                ›
                              </span>
                            </th>
                          </tr>
                        </l>
                        <tr>
                          <th
                            className="dow"
                            key="Su0"
                          >
                            Su
                          </th>
                          <th
                            className="dow"
                            key="Mo1"
                          >
                            Mo
                          </th>
                          <th
                            className="dow"
                            key="Tu2"
                          >
                            Tu
                          </th>
                          <th
                            className="dow"
                            key="We3"
                          >
                            We
                          </th>
                          <th
                            className="dow"
                            key="Th4"
                          >
                            Th
                          </th>
                          <th
                            className="dow"
                            key="Fr5"
                          >
                            Fr
                          </th>
                          <th
                            className="dow"
                            key="Sa6"
                          >
                            Sa
                          </th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr
                          key="11_0"
                        >
                          <td
                            className="rdtDay rdtOld"
                            data-month={9}
                            data-value={30}
                            data-year={2022}
                            key="10_30"
                            onClick={[Function]}
                          >
                            30
                          </td>
                          <td
                            className="rdtDay rdtOld"
                            data-month={9}
                            data-value={31}
                            data-year={2022}
                            key="10_31"
                            onClick={[Function]}
                          >
                            31
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={1}
                            data-year={2022}
                            key="11_1"
                            onClick={[Function]}
                          >
                            1
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={2}
                            data-year={2022}
                            key="11_2"
                            onClick={[Function]}
                          >
                            2
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={3}
                            data-year={2022}
                            key="11_3"
                            onClick={[Function]}
                          >
                            3
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={4}
                            data-year={2022}
                            key="11_4"
                            onClick={[Function]}
                          >
                            4
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={5}
                            data-year={2022}
                            key="11_5"
                            onClick={[Function]}
                          >
                            5
                          </td>
                        </tr>
                        <tr
                          key="11_1"
                        >
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={6}
                            data-year={2022}
                            key="11_6"
                            onClick={[Function]}
                          >
                            6
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={7}
                            data-year={2022}
                            key="11_7"
                            onClick={[Function]}
                          >
                            7
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={8}
                            data-year={2022}
                            key="11_8"
                            onClick={[Function]}
                          >
                            8
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={9}
                            data-year={2022}
                            key="11_9"
                            onClick={[Function]}
                          >
                            9
                          </td>
                          <td
                            className="rdtDay rdtActive rdtToday"
                            data-month={10}
                            data-value={10}
                            data-year={2022}
                            key="11_10"
                            onClick={[Function]}
                          >
                            10
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={11}
                            data-year={2022}
                            key="11_11"
                            onClick={[Function]}
                          >
                            11
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={12}
                            data-year={2022}
                            key="11_12"
                            onClick={[Function]}
                          >
                            12
                          </td>
                        </tr>
                        <tr
                          key="11_2"
                        >
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={13}
                            data-year={2022}
                            key="11_13"
                            onClick={[Function]}
                          >
                            13
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={14}
                            data-year={2022}
                            key="11_14"
                            onClick={[Function]}
                          >
                            14
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={15}
                            data-year={2022}
                            key="11_15"
                            onClick={[Function]}
                          >
                            15
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={16}
                            data-year={2022}
                            key="11_16"
                            onClick={[Function]}
                          >
                            16
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={17}
                            data-year={2022}
                            key="11_17"
                            onClick={[Function]}
                          >
                            17
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={18}
                            data-year={2022}
                            key="11_18"
                            onClick={[Function]}
                          >
                            18
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={19}
                            data-year={2022}
                            key="11_19"
                            onClick={[Function]}
                          >
                            19
                          </td>
                        </tr>
                        <tr
                          key="11_3"
                        >
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={20}
                            data-year={2022}
                            key="11_20"
                            onClick={[Function]}
                          >
                            20
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={21}
                            data-year={2022}
                            key="11_21"
                            onClick={[Function]}
                          >
                            21
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={22}
                            data-year={2022}
                            key="11_22"
                            onClick={[Function]}
                          >
                            22
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={23}
                            data-year={2022}
                            key="11_23"
                            onClick={[Function]}
                          >
                            23
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={24}
                            data-year={2022}
                            key="11_24"
                            onClick={[Function]}
                          >
                            24
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={25}
                            data-year={2022}
                            key="11_25"
                            onClick={[Function]}
                          >
                            25
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={26}
                            data-year={2022}
                            key="11_26"
                            onClick={[Function]}
                          >
                            26
                          </td>
                        </tr>
                        <tr
                          key="11_4"
                        >
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={27}
                            data-year={2022}
                            key="11_27"
                            onClick={[Function]}
                          >
                            27
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={28}
                            data-year={2022}
                            key="11_28"
                            onClick={[Function]}
                          >
                            28
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={29}
                            data-year={2022}
                            key="11_29"
                            onClick={[Function]}
                          >
                            29
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={30}
                            data-year={2022}
                            key="11_30"
                            onClick={[Function]}
                          >
                            30
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={1}
                            data-year={2022}
                            key="12_1"
                            onClick={[Function]}
                          >
                            1
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={2}
                            data-year={2022}
                            key="12_2"
                            onClick={[Function]}
                          >
                            2
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={3}
                            data-year={2022}
                            key="12_3"
                            onClick={[Function]}
                          >
                            3
                          </td>
                        </tr>
                        <tr
                          key="11_5"
                        >
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={4}
                            data-year={2022}
                            key="12_4"
                            onClick={[Function]}
                          >
                            4
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={5}
                            data-year={2022}
                            key="12_5"
                            onClick={[Function]}
                          >
                            5
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={6}
                            data-year={2022}
                            key="12_6"
                            onClick={[Function]}
                          >
                            6
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={7}
                            data-year={2022}
                            key="12_7"
                            onClick={[Function]}
                          >
                            7
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={8}
                            data-year={2022}
                            key="12_8"
                            onClick={[Function]}
                          >
                            8
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={9}
                            data-year={2022}
                            key="12_9"
                            onClick={[Function]}
                          >
                            9
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={10}
                            data-year={2022}
                            key="12_10"
                            onClick={[Function]}
                          >
                            10
                          </td>
                        </tr>
                      </tbody>
                      <tfoot>
                        <tr>
                          <td
                            className="rdtTimeToggle"
                            colSpan={7}
                            onClick={[Function]}
                          >
                            9:00 am
                          </td>
                        </tr>
                      </tfoot>
                    </table>
                  </div>
                </a>
              </div>
            </div>
          </n>
        </OnClickOutside(n)>
      </n>
    </div>
  </div>
</DatePickerContainer>
`;

exports[`DatePickerContainer component renders when there is no initial value 1`] = `
<DatePickerContainer
  closeFunction={[Function]}
  defaultText="No date selected"
  handleClickCopyToAll={[Function]}
  icon={null}
  initialValue={null}
  rowIndex={0}
>
  <div
    className="date-picker-container"
  >
    <div
      className="icon-and-datetime-picker"
    >
      <n
        className=""
        closeOnClickOutside={true}
        closeOnSelect={false}
        closeOnTab={true}
        dateFormat="MMM D"
        initialValue={null}
        initialViewDate={2022-11-10T09:00:00.000Z}
        input={true}
        inputProps={Object {}}
        isValidDate={[Function]}
        onBeforeNavigate={[Function]}
        onCalendarClose={[Function]}
        onCalendarOpen={[Function]}
        onChange={[Function]}
        onClose={[Function]}
        onNavigate={[Function]}
        onNavigateBack={[Function]}
        onNavigateForward={[Function]}
        onOpen={[Function]}
        renderInput={[Function]}
        renderView={[Function]}
        strictParsing={true}
        timeConstraints={Object {}}
        timeFormat="h:mm a"
        utc={true}
      >
        <OnClickOutside(n)
          className="rdt"
          eventTypes={
            Array [
              "mousedown",
              "touchstart",
            ]
          }
          excludeScrollbar={false}
          onClickOut={[Function]}
          outsideClickIgnoreClass="ignore-react-onclickoutside"
          preventDefault={false}
          stopPropagation={false}
        >
          <n
            className="rdt"
            disableOnClickOutside={[Function]}
            enableOnClickOutside={[Function]}
            eventTypes={
              Array [
                "mousedown",
                "touchstart",
              ]
            }
            onClickOut={[Function]}
            outsideClickIgnoreClass="ignore-react-onclickoutside"
            preventDefault={false}
            stopPropagation={false}
          >
            <div
              className="rdt"
            >
              <div>
                <DatetimeInput
                  defaultText="No date selected"
                  props={
                    Object {
                      "className": "form-control",
                      "onChange": [Function],
                      "onClick": [Function],
                      "onFocus": [Function],
                      "onKeyDown": [Function],
                      "type": "text",
                      "value": "",
                    }
                  }
                >
                  <button
                    className="interactive-wrapper focus-on-light datetime-input"
                    onClick={[Function]}
                    type="button"
                  >
                    <input
                      className="form-control"
                      onChange={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      placeholder="No date selected"
                      type="text"
                      value=""
                    />
                    <img
                      alt="dropdown indicator"
                      className="dropdown-indicator"
                      src="https://assets.quill.org/images/icons/dropdown.svg"
                    />
                  </button>
                </DatetimeInput>
              </div>
              <div
                className="rdtPicker"
              >
                <a
                  isValidDate={[Function]}
                  moment={[Function]}
                  navigate={[Function]}
                  renderDay={[Function]}
                  showView={[Function]}
                  timeFormat="h:mm a"
                  updateDate={[Function]}
                  viewDate={"2022-11-10T09:00:00.000Z"}
                >
                  <div
                    className="rdtDays"
                  >
                    <table>
                      <thead>
                        <l
                          onClickNext={[Function]}
                          onClickPrev={[Function]}
                          onClickSwitch={[Function]}
                          switchColSpan={5}
                          switchContent="November 2022"
                          switchProps={
                            Object {
                              "data-value": 10,
                            }
                          }
                        >
                          <tr>
                            <th
                              className="rdtPrev"
                              onClick={[Function]}
                            >
                              <span>
                                ‹
                              </span>
                            </th>
                            <th
                              className="rdtSwitch"
                              colSpan={5}
                              data-value={10}
                              onClick={[Function]}
                            >
                              November 2022
                            </th>
                            <th
                              className="rdtNext"
                              onClick={[Function]}
                            >
                              <span>
                                ›
                              </span>
                            </th>
                          </tr>
                        </l>
                        <tr>
                          <th
                            className="dow"
                            key="Su0"
                          >
                            Su
                          </th>
                          <th
                            className="dow"
                            key="Mo1"
                          >
                            Mo
                          </th>
                          <th
                            className="dow"
                            key="Tu2"
                          >
                            Tu
                          </th>
                          <th
                            className="dow"
                            key="We3"
                          >
                            We
                          </th>
                          <th
                            className="dow"
                            key="Th4"
                          >
                            Th
                          </th>
                          <th
                            className="dow"
                            key="Fr5"
                          >
                            Fr
                          </th>
                          <th
                            className="dow"
                            key="Sa6"
                          >
                            Sa
                          </th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr
                          key="11_0"
                        >
                          <td
                            className="rdtDay rdtOld"
                            data-month={9}
                            data-value={30}
                            data-year={2022}
                            key="10_30"
                            onClick={[Function]}
                          >
                            30
                          </td>
                          <td
                            className="rdtDay rdtOld"
                            data-month={9}
                            data-value={31}
                            data-year={2022}
                            key="10_31"
                            onClick={[Function]}
                          >
                            31
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={1}
                            data-year={2022}
                            key="11_1"
                            onClick={[Function]}
                          >
                            1
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={2}
                            data-year={2022}
                            key="11_2"
                            onClick={[Function]}
                          >
                            2
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={3}
                            data-year={2022}
                            key="11_3"
                            onClick={[Function]}
                          >
                            3
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={4}
                            data-year={2022}
                            key="11_4"
                            onClick={[Function]}
                          >
                            4
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={5}
                            data-year={2022}
                            key="11_5"
                            onClick={[Function]}
                          >
                            5
                          </td>
                        </tr>
                        <tr
                          key="11_1"
                        >
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={6}
                            data-year={2022}
                            key="11_6"
                            onClick={[Function]}
                          >
                            6
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={7}
                            data-year={2022}
                            key="11_7"
                            onClick={[Function]}
                          >
                            7
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={8}
                            data-year={2022}
                            key="11_8"
                            onClick={[Function]}
                          >
                            8
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={9}
                            data-year={2022}
                            key="11_9"
                            onClick={[Function]}
                          >
                            9
                          </td>
                          <td
                            className="rdtDay rdtToday"
                            data-month={10}
                            data-value={10}
                            data-year={2022}
                            key="11_10"
                            onClick={[Function]}
                          >
                            10
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={11}
                            data-year={2022}
                            key="11_11"
                            onClick={[Function]}
                          >
                            11
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={12}
                            data-year={2022}
                            key="11_12"
                            onClick={[Function]}
                          >
                            12
                          </td>
                        </tr>
                        <tr
                          key="11_2"
                        >
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={13}
                            data-year={2022}
                            key="11_13"
                            onClick={[Function]}
                          >
                            13
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={14}
                            data-year={2022}
                            key="11_14"
                            onClick={[Function]}
                          >
                            14
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={15}
                            data-year={2022}
                            key="11_15"
                            onClick={[Function]}
                          >
                            15
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={16}
                            data-year={2022}
                            key="11_16"
                            onClick={[Function]}
                          >
                            16
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={17}
                            data-year={2022}
                            key="11_17"
                            onClick={[Function]}
                          >
                            17
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={18}
                            data-year={2022}
                            key="11_18"
                            onClick={[Function]}
                          >
                            18
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={19}
                            data-year={2022}
                            key="11_19"
                            onClick={[Function]}
                          >
                            19
                          </td>
                        </tr>
                        <tr
                          key="11_3"
                        >
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={20}
                            data-year={2022}
                            key="11_20"
                            onClick={[Function]}
                          >
                            20
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={21}
                            data-year={2022}
                            key="11_21"
                            onClick={[Function]}
                          >
                            21
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={22}
                            data-year={2022}
                            key="11_22"
                            onClick={[Function]}
                          >
                            22
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={23}
                            data-year={2022}
                            key="11_23"
                            onClick={[Function]}
                          >
                            23
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={24}
                            data-year={2022}
                            key="11_24"
                            onClick={[Function]}
                          >
                            24
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={25}
                            data-year={2022}
                            key="11_25"
                            onClick={[Function]}
                          >
                            25
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={26}
                            data-year={2022}
                            key="11_26"
                            onClick={[Function]}
                          >
                            26
                          </td>
                        </tr>
                        <tr
                          key="11_4"
                        >
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={27}
                            data-year={2022}
                            key="11_27"
                            onClick={[Function]}
                          >
                            27
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={28}
                            data-year={2022}
                            key="11_28"
                            onClick={[Function]}
                          >
                            28
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={29}
                            data-year={2022}
                            key="11_29"
                            onClick={[Function]}
                          >
                            29
                          </td>
                          <td
                            className="rdtDay"
                            data-month={10}
                            data-value={30}
                            data-year={2022}
                            key="11_30"
                            onClick={[Function]}
                          >
                            30
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={1}
                            data-year={2022}
                            key="12_1"
                            onClick={[Function]}
                          >
                            1
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={2}
                            data-year={2022}
                            key="12_2"
                            onClick={[Function]}
                          >
                            2
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={3}
                            data-year={2022}
                            key="12_3"
                            onClick={[Function]}
                          >
                            3
                          </td>
                        </tr>
                        <tr
                          key="11_5"
                        >
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={4}
                            data-year={2022}
                            key="12_4"
                            onClick={[Function]}
                          >
                            4
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={5}
                            data-year={2022}
                            key="12_5"
                            onClick={[Function]}
                          >
                            5
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={6}
                            data-year={2022}
                            key="12_6"
                            onClick={[Function]}
                          >
                            6
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={7}
                            data-year={2022}
                            key="12_7"
                            onClick={[Function]}
                          >
                            7
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={8}
                            data-year={2022}
                            key="12_8"
                            onClick={[Function]}
                          >
                            8
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={9}
                            data-year={2022}
                            key="12_9"
                            onClick={[Function]}
                          >
                            9
                          </td>
                          <td
                            className="rdtDay rdtNew"
                            data-month={11}
                            data-value={10}
                            data-year={2022}
                            key="12_10"
                            onClick={[Function]}
                          >
                            10
                          </td>
                        </tr>
                      </tbody>
                      <tfoot>
                        <tr>
                          <td
                            className="rdtTimeToggle"
                            colSpan={7}
                            onClick={[Function]}
                          >
                            9:00 am
                          </td>
                        </tr>
                      </tfoot>
                    </table>
                  </div>
                </a>
              </div>
            </div>
          </n>
        </OnClickOutside(n)>
      </n>
    </div>
  </div>
</DatePickerContainer>
`;
